--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   sliding_switch:
   flutter_spinkit:
   syncfusion_flutter_gauges:
+  firebase_core: ^1.20.1
 
 dev_dependencies:
   flutter_test:
